# proyecto-programacion-ll

./: .gitignore  Busqueda.cpp  Busqueda.h  CMakeLists.txt  Equipo.cpp  Equipo.h  EquipoCritico.cpp  EquipoCritico.h  EquipoNormal.cpp  EquipoNormal.h  EstrategiaPrioridad.cpp  EstrategiaPrioridad.h  Excepciones.h  Exceptions.h  IEstrategiaPrioridad.h  Incidencia.cpp  Incidencia.h  Mantenimiento.h  MantenimientoBase.cpp  MantenimientoBase.h  MantenimientoCorrectivo.cpp  MantenimientoCorrectivo.h  MantenimientoDecorator.cpp  MantenimientoDecorator.h  MantenimientoPreventivo.cpp  MantenimientoPreventivo.h  Ordenamiento.cpp  Ordenamiento.h  README.md  ReportService.cpp  ReportService.h  Simulador.cpp  Simulador.h  Strategy.h  h origin main --force  main.cpp
